--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name ="underline">#BDB8B8</color>
     <color name ="readMessage">#404040</color>
 
+    <color name="chat_color_sender">#3498db</color>
+    <color name="chat_color_receiver">#2ecc71</color>
+
+
 </resources>
